; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/rs/extr_rs.c_main.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/rs/extr_rs.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@flags = common dso_local global i32 0, align 4
@SHAPEONLY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"%d %d\0A\00", align 1
@irows = common dso_local global i32 0, align 4
@icols = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load i8**, i8*** %5, align 8
  %8 = call i32 @getargs(i32 %6, i8** %7)
  %9 = call i32 (...) @getfile()
  %10 = load i32, i32* @flags, align 4
  %11 = load i32, i32* @SHAPEONLY, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %2
  %15 = load i32, i32* @irows, align 4
  %16 = load i32, i32* @icols, align 4
  %17 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %15, i32 %16)
  %18 = call i32 @exit(i32 0) #3
  unreachable

19:                                               ; preds = %2
  %20 = call i32 (...) @prepfile()
  %21 = call i32 (...) @putfile()
  %22 = call i32 @exit(i32 0) #3
  unreachable
}

declare dso_local i32 @getargs(i32, i8**) #1

declare dso_local i32 @getfile(...) #1

declare dso_local i32 @printf(i8*, i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @prepfile(...) #1

declare dso_local i32 @putfile(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
